<?xml version="1.0"?>
<package format="2">
  <name>cloud2range</name>
  <version>0.0.0</version>
  <description>The cloud2range package</description>
  <maintainer email="quchao@seas.upenn.edu">chao</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>

  <export>
  </export>
</package>
